// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Button component test should render in loading state 1`] = `
<button
  className="button buttonClass is-loading"
  onClick={[Function]}
>
  button text
</button>
`;

exports[`Button component test should render not in loading state 1`] = `
<button
  className="button buttonClass "
  onClick={[Function]}
>
  button text
</button>
`;

exports[`Button component test should render without crash with wrapper 1`] = `
<button
  className="button  "
  onClick={[Function]}
/>
`;
